fix alignment in expericen section

--- a/daleb-portfolio/src/style.scss
+++ b/daleb-portfolio/src/style.scss
@@ -58,6 +58,11 @@ body {
   line-height: 1.5;
 }
 
+section {
+  min-height: 90vh !important;
+
+}
+
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
